client/resources/css/grommunio.css
/* ... */
      .x-zarafa-boxfield ul li.x-zarafa-boxfield-input-item input.x-zarafa-boxfield-input-noborder {
        padding: 0 6px;
        border: none;
        height: 24px;
        line-height: 24px;
        /* ExtJS adds a gradient as background, here we remove it */
        background-image: none; }
      .x-zarafa-boxfield ul li.x-zarafa-boxfield-input-item input.x-trigger-noedit {
        cursor: auto; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item {
      padding: 0 0 0 8px;
      background: #f0f2f5;
      border: 1px solid #d0d5dd;
      border-radius: 16px; }
      .x-zarafa-boxfield ul .x-zarafa-boxfield-item .x-zarafa-boxfield-item-icon {
        float: left;
        height: 16px;
        width: 16px;
        margin-right: 6px;
        margin-top: 3px; }
      .x-zarafa-boxfield ul .x-zarafa-boxfield-item .x-zarafa-boxfield-item-text {
        float: left;
        line-height: 22px;
        overflow: hidden; }
      .x-zarafa-boxfield ul .x-zarafa-boxfield-item .x-zarafa-boxfield-item-close {
        float: left;
        cursor: pointer;
        padding-left: 6px;
        padding-right: 6px;
        width: 7px;
        height: 7px;
        margin-top: 7.5px;
        /*
        @extend .icon_cross;
        background-position: sprite-position($icons, icon_cross, $offset-y: 0, $offset-x: $padding-medium);
        */ }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item-hover,
    .x-zarafa-boxfield ul .x-zarafa-boxfield-recipient-item.x-zarafa-boxfield-item-hover {
      background: #e4e7ec;
      border: 1px solid #98a2b3; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item-focus,
    .x-zarafa-boxfield ul .x-zarafa-boxfield-recipient-item.x-zarafa-boxfield-item-focus {
      background-color: #d5e8f7; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item.x-zarafa-boxfield-recipient-item .x-zarafa-boxfield-item-icon {
      display: none; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item.x-zarafa-boxfield-recipient-item-resolved .x-zarafa-boxfield-item-icon,
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item.x-zarafa-boxfield-recipient-item-ambiguous .x-zarafa-boxfield-item-icon {
      display: inline-block; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-recipient-item-invalid {
      background: transparent;
      border-color: transparent; }
      .x-zarafa-boxfield ul .x-zarafa-boxfield-recipient-item-invalid .x-zarafa-boxfield-item-text {
        border-bottom: 2px dotted var(--color-error);
        line-height: 18px;
        padding-top: 2px; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-recipient-item-ambiguous {
      background: #f8bf76;
      border-color: #d19c47; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-recipient-item-ambiguous.x-zarafa-boxfield-item-focus {
      background-color: #3e91f3;
      color: #FFF; }
    .x-zarafa-boxfield ul .x-zarafa-boxfield-item-expand {
      width: 8px;
      height: 8px;
      margin-top: 7px;
      float: left;
      display: block;
      padding-right: 6px;
      cursor: pointer;
      background-size: 8px; }

/* Make the whole compositefield for mailcreate and addressbook dialog cursor text and not the first input field */
.zarafa-addressbook-dialog-compositefield .x-form-text.x-zarafa-boxfield,
.zarafa-mailcreatepanel-field-from .x-form-text.x-zarafa-boxfield,
.zarafa-mailcreatepanel-field-from-large .x-form-text.x-zarafa-boxfield,
.zarafa-mailcreatepanel-field-cc .x-form-text.x-zarafa-boxfield,
.zarafa-mailcreatepanel-field-to .x-form-text.x-zarafa-boxfield,
.zarafa-mailcreatepanel-field-bcc .x-form-text.x-zarafa-boxfield {
  cursor: text; }

.x-zarafa-boxfield-suggestion-cross {
  cursor: pointer;
  float: right;
  height: 7px;
  margin-top: 5px;
  padding: 0 6px;
  visibility: hidden; }

.x-zarafa-boxfield-suggestion-item:hover .x-zarafa-boxfield-suggestion-cross {
  visibility: visible !important; }

.zarafa-compositefield > .x-box-inner {
  /* this is necessary because otherwise the shadows of the buttons in the new design (2015) will be cut off */
  overflow: visible; }

.zarafa-resizable-compositefield {
  padding-bottom: 6px; }

/*****************************************************************************
 * Attachment boxfield
 ****************************************************************************/
.x-zarafa-boxfield.zarafa-attachmentfield {
  border: none; }
  .x-zarafa-boxfield.zarafa-attachmentfield ul {
    padding: 0;
    /* increase the minimum height because this boxfield has no border */
    min-height: 24px; }
    .x-zarafa-boxfield.zarafa-attachmentfield ul li {
      margin-top: 0;
      margin-bottom: 1px; }
    .x-zarafa-boxfield.zarafa-attachmentfield ul .x-zarafa-boxfield-item .x-zarafa-boxfield-item-icon {
      margin-top: 4px; }
    .x-zarafa-boxfield.zarafa-attachmentfield ul .x-zarafa-boxfield-item .x-zarafa-boxfield-item-text {
      line-height: 24px; }
    .x-zarafa-boxfield.zarafa-attachmentfield ul .x-zarafa-boxfield-item .x-zarafa-boxfield-item-close {
      margin-top: 8.5px; }
    .x-zarafa-boxfield.zarafa-attachmentfield ul .x-zarafa-boxfield-item.x-zarafa-boxfield-attachment-item-uploading {
      background-color: #d5e8f7;
      background-image: linear-gradient(45deg, transparent, transparent 25%, rgba(255, 255, 255, 0.7) 25%, rgba(255, 255, 255, 0.7) 50%, transparent 50%, transparent 75%, rgba(255, 255, 255, 0.7) 75%, rgba(255, 255, 255, 0.7) 100%, transparent);
      background-size: 40px 40px;
      animation: progress 1.75s linear infinite; }
    .x-zarafa-boxfield.zarafa-attachmentfield ul .x-zarafa-boxfield-item.x-zarafa-boxfield-attachment-item-invalid {
      background-color: #F3D6D6;
      border-color: #D7B7B7; }

/* Favorites settings */
body.hideFavorites .zarafa-tree-ipm-subtree-favorites-container {
  display: none !important; }
/* ... */

